# lst-agn-analysis

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  Snakefile  config.json  config.py  config.yaml  copy-from-cluster.py  dl1todl2.sh  enviroment.yml  get-testing-pointings.sh  lapalma.py  lapalma.sh  link-paths.py  link_dl1.sh  local.mk  my_create_dl3_file  my_dl1_to_dl2  pyproject.toml  requirements.txt  run_ids.mk  run_ids.py
analysis/: __init__.py  analysis.py
configs/: config.yaml  data-selection.json  irf_tool_config.json  lst_agn.json  model-mrk421.yaml  mrk421-2021.yaml  mrk421-2022.yaml  mrk421.yaml
envs/: environment.yml  snakemake.yml
local/: config.yaml
scripts/: calc_bayesian_blocks.py  calc_counts_after_cuts.py  calc_dl4_diagnostics.py  calc_flux_points.py  calc_light_curve.py  calc_sensitivity.py  calc_skymap.py  calc_skymap_gammas.py  calc_theta2.py  calc_theta2_per_obs.py  check-dl1.py  check_dl1.py  compare_aic.py  compare_bayesian_blocks.py  config.py  create-night-run-list.py  data-check.py  events.py  extract-numbers.py  fit-model.py  fix-edisp-bug.py  flux_points.py  gather-run-pointings.py  gather-test-nodes.py  light_curve.py  list-all-datachecks.py  log.py  merge-datachecks.py  plot-cosmics-above.py  plot-cosmics.py  plot-moon-illumination.py  plot_aeff.py  plot_counts_after_cuts.py  plot_dl4_diagnostics.py  plot_edisp.py  plot_flux_points.py  plot_gh_cut.py  plot_irf_aeff.py  plot_irf_edisp.py  plot_irf_gh_cut.py  (+16 more)
simple/: config.yaml  scancel.sh
slurm/: config.yaml
workflow/: Snakefile  (+3 more)
(+29 files in other folders)
