[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.12"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fit_sed = "analysis.analysis:main"
fit_flux_points = "analysis.scripts.flux_points:main"
fit_light_curve = "analysis.scripts.light_curve:main"
plot_theta2 = "analysis.scripts.theta2:main"
plot_observation_plots = "analysis.scripts.events:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
