[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
astropy = "^5.0.1"
gammapy = "^0.19"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fit_sed = "analysis.analysis:main"
fit_flux_points = "analysis.scripts.flux_points:main"
fit_light_curve = "analysis.scripts.light_curve:main"
plot_theta2 = "analysis.scripts.theta2:main"
plot_observation_plots = "analysis.scripts.events:main"
plot_sensitivity = "analysis.scripts.sensitivity:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
